2010-03-22  David Kilzer  <ddkilzer@apple.com>

        Remove http/tests/cookies/simple-cookies-expired.html from skip list after CFNetwork issue is resolved
        <http://webkit.org/b/25861>
        <rdar://problem/6901322>

        Reviewed by Darin Adler.

        * platform/win/Skipped: Removed:
        - http/tests/cookies/simple-cookies-expired.html

2010-03-22  Eric Seidel  <eric@webkit.org>

        Rubber-stamped by Brady Eidson.

        fast/loader/cancel-load-during-port-block-timer.html fails on Tiger bot
        https://bugs.webkit.org/show_bug.cgi?id=36425

        This test bleeds into the next test and causes failures.  Unsure of the
        cause.  Brady suggests we disable it for now (to match the other disabled) api test.

        * fast/loader/api-test-go-to-current-back-forward-item.html-disabled: Renamed from LayoutTests/fast/loader/api-test-go-to-current-back-forward-item.html.

2010-03-22  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Nate Chapin.

        [v8] Crash if the worker is terminated before its initial script is executed.
        https://bugs.webkit.org/show_bug.cgi?id=36336

        * fast/workers/termination-early-expected.txt: Added.
        * fast/workers/termination-early.html: Added.

2010-03-22  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed, skip new failing test.

        fast/loader/stateobjects/replacestate-in-iframe.html caused infinite loop.
        https://bugs.webkit.org/show_bug.cgi?id=36467

        * platform/gtk/Skipped: fast/loader/stateobjects/replacestate-in-iframe.html skipped until fix.
        * platform/qt/Skipped: fast/loader/stateobjects/replacestate-in-iframe.html skipped until fix.

2010-03-22  Nate Chapin  <japhet@chromium.org>

        Unreviewed, Chromium test fixes.

        * platform/chromium-linux/fast/dynamic/flash-replacement-test-expected.checksum:
        * platform/chromium-linux/fast/dynamic/flash-replacement-test-expected.png: