@@ -1,3 +1,15 @@
+2010-03-19  Abhishek Arya  <inferno@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36339
+        Off-by-one memory corruption fix for long invalid websockets upgrade header
+
+        Test: websocket/tests/long-invalid-header.html
+
+        * websockets/WebSocketHandshake.cpp:
+        (WebCore::WebSocketHandshake::readServerHandshake):
+
 2010-03-22  Fumitoshi Ukai  <ukai@chromium.org>
 
         Unreviewed build fix for Chromim Mac at r56376
