@@ -1,3 +1,15 @@
+2010-03-19  Abhishek Arya  <inferno@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36339
+        This LayoutTest tests for webkit ability to process long invalid headers generated by misbehaving websockets servers.
+
+        * websocket/tests/long-invalid-header-expected.txt: Added.
+        * websocket/tests/long-invalid-header.html: Added.
+        * websocket/tests/long-invalid-header_wsh.py: Added.
+        * websocket/tests/script-tests/long-invalid-header.js: Added.
+
 2010-03-22  David Kilzer  <ddkilzer@apple.com>
 
         Remove http/tests/cookies/simple-cookies-expired.html from skip list after CFNetwork issue is resolved
